Major PMD violations removed, many warnings still exist.